tests/ui/const-generics/issues/issue-63322-forbid-dyn.min.stderr
error: `&'static (dyn A + 'static)` is forbidden as the type of a const generic parameter
  --> $DIR/issue-63322-forbid-dyn.rs:9:18
   |
LL | fn test<const T: &'static dyn A>() {
   |                  ^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`

error: aborting due to 1 previous error

